--- a/backend/package.json
+++ b/backend/package.json
@@ -23,12 +23,18 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^11.1.5",
     "@prisma/client": "^6.6.0",
+    "@types/passport-jwt": "^4.0.1",
     "axios": "^1.8.4",
     "class-validator": "^0.14.1",
+    "jsonwebtoken": "^9.0.2",
     "node-fetch": "^2.7.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
