--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "^6.6.0",
     "@types/passport-jwt": "^4.0.1",
     "axios": "^1.8.4",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^2.7.0",
