--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/nextjs,node,dotenv,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=nextjs,node,dotenv,visualstudiocode
 
+docker-publish.sh
+
 ### CursorAI ###
 .cursor/
 
